test/litecheck/cases/require_invalid-1.expected
require_invalid-1.test:6: [error] invalid REQUIRE directive: `command ()', caused by
(loaded):1:11: [syntax error] expected `{'
command ()
          ^

